--- a/Olimpiadas/Web.config
+++ b/Olimpiadas/Web.config
@@ -17,8 +17,9 @@
   </appSettings>
   <connectionStrings>
     <!--SQL Express LocalDB: -->
-    <add name="OlimpiadasDB" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\OlimpiadaData.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
-  <add name="OlimpiadasContainer" connectionString="metadata=res://*/Models.Olimpiadas.csdl|res://*/Models.Olimpiadas.ssdl|res://*/Models.Olimpiadas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\Olimpiadas.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <!-- <add name="OlimpiadasContainer" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\OlimpiadaData.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+     <add name="OlimpiadasContainer" connectionString="metadata=res://*/Models.Olimpiadas.csdl|res://*/Models.Olimpiadas.ssdl|res://*/Models.Olimpiadas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\Olimpiadas.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <system.web>
     <httpRuntime targetFramework="4.5" />
     <compilation debug="true" targetFramework="4.5" />
